--- a/init_classic_link.yml
+++ b/init_classic_link.yml
@@ -1,4 +1,5 @@
 ---
+sdfjsdfjsdfj
 - name: Attache classic link
   command: /etc/ansible/roles/common/files/AttachClassicLinkVpc.py "{{ IP }}"
   delegate_to: 127.0.0.1
